@@ -6,6 +6,10 @@ For what's new in this release, see CHANGES.txt.
 3.3.4 - Unreleased
 ------------------
 
+- Don't add a .zem extension for the external editor except on OS X. This
+  closes http://dev.plone.org/plone/ticket/9888
+  [davisagli]
+
 - member_search_results display login names only if the user
   has "List portal members" permission.
   Return "not allowed" message and empty search results if not.
